welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: not found: value i1
		setCouleurBrosse(T(i1))
                                   ^